syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="PrdQueryTaUnitFundFinanceById";
//Generated By BrewRobot:Wed May 17 16:13:05 CST 2017

message PBIFE_prdquery_prdQueryTaUnitFundFinanceById{

	message TaUnitFundFinance{
		string productName = 1; //,基金名称,String,不校验,否,,
		string subjectType = 2; //,类型(1-股权/创业类;2-股权/创业类FOF;3-证券类;4-证券类FOF;5-其他类;6-其他类FOF),String,不校验,否,,
		string managerShortname = 4; //,管理人,String,不校验,否,,
		string unit = 5; //,持有份额,String,不校验,否,,
		string establishDate = 6; //,设立日,String,不校验,否,,
		string dueDate = 7; //,到期日,String,不校验,否,,
		string meritCompareStandard = 8; //,业绩比较基准,String,不校验,否,,
		string isTransfer = 9; //,是否可转让,String,不校验,否,,
		string meritPay = 10; //,业绩报酬,String,不校验，否,,
	}
	
	TaUnitFundFinance taUnitAndProductInfoObject=1;
	
	string subjectTypeStr = 3;//,类型中文(1-股权/创业类;2-股权/创业类FOF;3-证券类;4-证券类FOF;5-其他类;6-其他类FOF),String,不校验,否,,

}

message Ret_PBIFE_prdquery_prdQueryTaUnitFundFinanceById{
	
	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_prdquery_prdQueryTaUnitFundFinanceById data=3;


}

message REQ_PBIFE_prdquery_prdQueryTaUnitFundFinanceById{
	
	string id = 1; //,持仓ID,String,不校验,否,,

}